--- a/UI/manage-product.html
+++ b/UI/manage-product.html
@@ -56,7 +56,7 @@
                         <thead>
                         <th>Name</th>
                         <th>Unit</th>
-                        <th>Price Per Unit</th>
+                        <th>Price Per Unit (tk)</th>
                         <th style="width: 150px">Action</th>
                         </thead>
                         <tbody>
@@ -93,7 +93,7 @@
                             </div>
                             <div class="col-sm-12">
                                 <div class="form-group">
-                                    <label >Price Per Unit</label>
+                                    <label >Price Per Unit (Tk)</label>
                                     <input class="form-control" placeholder="Price Per Unit" name="price" id="price" type="text" value="">
                                 </div>
                             </div>
