--- a/UI/index.html
+++ b/UI/index.html
@@ -61,7 +61,7 @@
                                         <th>Date</th>
                                         <th>Order Number</th>
                                         <th>Customer Name</th>
-                                        <th>Total Cost</th>
+                                        <th>Total Cost (Tk)</th>
                                     </thead>
                                     <tbody>
 
